mutitand